# array-linkedList-imp-stack-queue

./: CMakeLists.txt  README.md
.github/: CODE_REVIEW_AUTOMATION.md  PR_AUTOMATION_SETUP.md  pull_request_template.md
.github/scripts/: code-review.js  generate-pr-description.js
.github/workflows/: auto-code-review.yml  auto-pr-description.yml
include/: array-stack.h
src/: array-stack.c  main.c
